<resources>
    <string name="app_name">小说阅读器</string>
    <string name="shelf">本地书架</string>
    <string name="classification">分类排行</string>
    <string name="permission_warnning">此程序没有执行所需要的权限</string>
    <string name="deleteBook">删除book?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="login">登录</string>
    <string name="loginorregister">登录/注册</string>
    <string name="syncRecord">同步阅读记录</string>
    <string name="restore">恢复</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="edit_site">编辑网站规则</string>
    <string name="update">更新</string>
    <string name="add">添加</string>
    <string name="whenconflict">当与本地配置冲突时</string>
    <string name="yes_local">是,优先本地配置</string>
    <string name="filter">筛选</string>

    <string name="full_screen">阅读界面全屏</string>
    <string name="full_screen_key">fullscreen</string>
    <string name="auto_download">自动下载后面3章</string>
    <string name="auto_download_key">autodownload</string>
    <string name="auto_remove">自动删除已读章节</string>
    <string name="auto_remove_key">autoremove</string>
    <string name="auto_remove_summary">保留最近3章</string>
    <string name="theme">主题</string>
    <string name="themeKey">theme</string>
    <string name="theme_summary">选择你喜欢的主题</string>
    <string name="rowspace">行间距</string>
    <string name="rowspaceKey">rowspace</string>
    <string name="rowspace_summary">选择适合的行距</string>
    <string name="fontSizeKey">FontSize</string>
    <string name="fontTypeKey">FontType</string>
    <string name="fontColorKey">FontColor</string>
    <string name="backgroundColorKey">backgroundColor</string>
    <string name="usernameKey">username</string>
    <string name="tokenKey">token</string>

    <string name="search_button">搜索</string>
    <string name="catalog_finish">目录下载完成</string>
    <string name="downloadAllBook">下载所有未读章节</string>
    <string name="prepare_download">更新章节列表，准备下载中。。。</string>
    <string name="downloading">下载中</string>
    <string name="downloadFailed">下载失败，请重试</string>
    <string name="wait4download">还有nn项待处理</string>
    <string name="downloadfailed">共有nn章下载失败</string>

    <string name="changeSource">换源下载</string>
    <string name="catalogButton">目录</string>
    <string name="setting">设置</string>
    <string name="backgroundButton">背景</string>
    <string name="followSystem">跟随系统</string>
    <string name="follow">人在追</string>
    <string name="retent">%读者留存</string>

    <string name="hostname">域名</string>
    <string name="catalogSelector">目录选择器</string>
    <string name="chapterSelector">章节内容选择器</string>
    <string name="catalogFilter">目录过滤</string>
    <string name="chapterFilter">章节过滤</string>
    <string name="searchUrl">搜索地址</string>
    <string name="redirectFileld">重定向</string>
    <string name="redirectUrl">重定向url选择器</string>
    <string name="noRedirectUrl">url选择器</string>
    <string name="redirectName">重定向书名选择器</string>
    <string name="noRedirectName">书名选择器</string>
    <string name="redirectImage">重定向封面选择器</string>
    <string name="noRedirectImage">封面选择器</string>
    <string name="charset">字符编码</string>

    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="username">用户名</string>
    <string name="password">密　码</string>
</resources>
