<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/full_screen_key"
        android:title="@string/full_screen" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/auto_download_key"
        android:title="@string/auto_download" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/auto_remove_key"
        android:summary="@string/auto_remove_summary"
        android:title="@string/auto_remove" />
    <ListPreference
        android:entries="@array/rowspace"
        android:entryValues="@array/rowspace_values"
        android:key="@string/rowspaceKey"
        android:summary="@string/rowspace_summary"
        android:title="@string/rowspace" />
    <ListPreference
        android:entries="@array/themes"
        android:entryValues="@array/themes_values"
        android:key="@string/themeKey"
        android:summary="@string/theme_summary"
        android:title="@string/theme" />
</PreferenceScreen>