<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netnovelreader.ui.activity.ShelfActivity">
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/search_button"
        android:icon="@drawable/ic_search"
        android:title="@string/search_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_site_selector"
        android:orderInCategory="100"
        android:title="@string/edit_site"
        app:showAsAction="never" />
</menu>
