<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.netnovelreader.viewmodel.ReaderViewModel" />

        <variable
            name="viewModel"
            type="ReaderViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.netnovelreader.ui.activity.ReaderActivity">

        <!--正文-->
        <com.pageview.PageView
            android:id="@+id/readerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundColor="@{viewModel.backgroundColor}"
            android:doDrawPrepare="@{() -> viewModel.drawPrepare()}"
            android:onNextChapter="@{() -> viewModel.onNextChapter()}"
            android:onCenterClick="@{() -> viewModel.centerClick()}"
            android:onPageChange="@{(index) -> viewModel.setRecord(index)}"
            android:onPreviousChapter="@{() -> viewModel.onPreviousChapter()}"
            android:text="@{viewModel.text}"
            android:textColor="@{viewModel.fontColor}"
            android:textFontType="@{viewModel.fontType}"
            android:textSize="@{viewModel.fontSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--顶部-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_dark"
            android:padding="5dp"
            android:visibility="@{viewModel.isViewShow[ReaderViewModel.HEAD_VIEW] ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/changeSouce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:onClick="@{() -> viewModel.changeSource()}"
                android:text="@string/changeSource"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <!--字体设置-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/fontSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_dark"
            android:visibility="@{viewModel.isViewShow[ReaderViewModel.Font_SETTING] ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/footView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/size45"
                style="@style/function_button_style_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="@{() -> viewModel.fontSizeChangeEvent(45f)}"
                android:text="45"
                android:textColor="@{viewModel.fontSizeSelected[0] ? @color/white : @color/gray}"
                app:layout_constraintEnd_toStartOf="@+id/size50"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/size50"
                style="@style/function_button_style_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.fontSizeChangeEvent(50f)}"
                android:text="50"
                android:textColor="@{viewModel.fontSizeSelected[1] ? @color/white : @color/gray}"
                app:layout_constraintEnd_toStartOf="@id/size55"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/size45"
                app:layout_constraintTop_toTopOf="@id/size45" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/size55"
                style="@style/function_button_style_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.fontSizeChangeEvent(55f)}"
                android:text="55"
                android:textColor="@{viewModel.fontSizeSelected[2] ? @color/white : @color/gray}"
                app:layout_constraintEnd_toStartOf="@id/size60"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/size50"
                app:layout_constraintTop_toTopOf="@id/size45" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/size60"
                style="@style/function_button_style_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.fontSizeChangeEvent(60f)}"
                android:text="60"
                android:textColor="@{viewModel.fontSizeSelected[3] ? @color/white : @color/gray}"
                app:layout_constraintEnd_toStartOf="@id/size65"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/size55"
                app:layout_constraintTop_toTopOf="@id/size45" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/size65"
                style="@style/function_button_style_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.fontSizeChangeEvent(65f)}"
                android:text="65"
                android:textColor="@{viewModel.fontSizeSelected[4] ? @color/white : @color/gray}"
                app:layout_constraintEnd_toStartOf="@+id/font_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/size60"
                app:layout_constraintTop_toTopOf="@id/size45" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/font_label"
                style="@style/function_button_style_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="字体"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/size65"
                app:layout_constraintTop_toTopOf="@id/size45" />

            <TextView
                android:id="@+id/tv_default"
                style="@style/setting_dialog_button"
                android:layout_marginStart="7dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@{viewModel.fontTypeSelected[0] ? @drawable/button_select_bg : @drawable/button_bg}"
                android:onClick="@{() -> viewModel.fontTypeChangeEvent(`default`)}"
                android:text="系统款"
                android:textColor="@{viewModel.fontTypeSelected[0] ? @color/white : @color/gray}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_beiweikai"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/size45" />

            <TextView
                android:id="@+id/tv_beiweikai"
                style="@style/setting_dialog_button"
                android:layout_weight="1"
                android:background="@{viewModel.fontTypeSelected[1] ? @drawable/button_select_bg : @drawable/button_bg}"
                android:onClick="@{() -> viewModel.fontTypeChangeEvent(`beiweikai`)}"
                android:text="北魏凯"
                android:textColor="@{viewModel.fontTypeSelected[1] ? @color/white : @color/gray}"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/tv_bysong"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/tv_default"
                app:layout_constraintTop_toTopOf="@id/tv_default" />

            <TextView
                android:id="@+id/tv_bysong"
                style="@style/setting_dialog_button"
                android:layout_weight="1"
                android:background="@{viewModel.fontTypeSelected[2] ? @drawable/button_select_bg : @drawable/button_bg}"
                android:onClick="@{() -> viewModel.fontTypeChangeEvent(`zedong`)}"
                android:text="泽东体"
                android:textColor="@{viewModel.fontTypeSelected[2] ? @color/white : @color/gray}"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/tv_fzkatong"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/tv_beiweikai"
                app:layout_constraintTop_toTopOf="@id/tv_default" />

            <TextView
                android:id="@+id/tv_fzkatong"
                style="@style/setting_dialog_button"
                android:layout_weight="1"
                android:background="@{viewModel.fontTypeSelected[3] ? @drawable/button_select_bg : @drawable/button_bg}"
                android:onClick="@{() -> viewModel.fontTypeChangeEvent(`fzkatong`)}"
                android:text="卡通型"
                android:textColor="@{viewModel.fontTypeSelected[3] ? @color/white : @color/gray}"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/tv_zhulang"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/tv_bysong"
                app:layout_constraintTop_toTopOf="@id/tv_default" />

            <TextView
                android:id="@+id/tv_zhulang"
                style="@style/setting_dialog_button"
                android:layout_weight="1"
                android:background="@{viewModel.fontTypeSelected[4] ? @drawable/button_select_bg : @drawable/button_bg}"
                android:onClick="@{() -> viewModel.fontTypeChangeEvent(`jianzhi`)}"
                android:text="剪纸体"
                android:textColor="@{viewModel.fontTypeSelected[4] ? @color/white : @color/gray}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/tv_fzkatong"
                app:layout_constraintTop_toTopOf="@id/tv_default" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/backgroundSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_dark"
            android:visibility="@{viewModel.isViewShow[ReaderViewModel.BG_SETTING] ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/footView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/read_bg_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/brightness_min" />

            <SeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:OnSeekBarChangeListener="@{(p) -> viewModel.changeBrightness(p)}"
                android:gravity="center"
                android:max="255"
                app:layout_constraintBottom_toTopOf="@id/read_bg_default"
                app:layout_constraintEnd_toStartOf="@id/imageView2"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="@id/imageView" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/read_bg_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sb_brightness"
                app:layout_constraintTop_toTopOf="@id/imageView"
                app:srcCompat="@drawable/brightness_max" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/read_bg_default"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:onClick="@{() -> viewModel.backgroundChangeEvent(0)}"
                android:src="@color/read_bg_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/read_bg_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/read_bg_1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="@{() -> viewModel.backgroundChangeEvent(1)}"
                android:src="@color/read_bg_1"
                app:layout_constraintEnd_toStartOf="@id/read_bg_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/read_bg_3"
                app:layout_constraintTop_toTopOf="@+id/read_bg_default" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/read_bg_2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="@{() -> viewModel.backgroundChangeEvent(2)}"
                android:src="@color/read_bg_2"
                app:layout_constraintEnd_toStartOf="@id/read_bg_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/read_bg_default"
                app:layout_constraintTop_toTopOf="@id/read_bg_default" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/read_bg_3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="@{() -> viewModel.backgroundChangeEvent(3)}"
                android:src="@color/read_bg_3"
                app:layout_constraintEnd_toStartOf="@+id/read_bg_1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/read_bg_2"
                app:layout_constraintTop_toTopOf="@+id/read_bg_default" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/read_bg_4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="@{() -> viewModel.backgroundChangeEvent(4)}"
                android:src="@color/read_bg_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/read_bg_1"
                app:layout_constraintTop_toTopOf="@id/read_bg_default" />

        </android.support.constraint.ConstraintLayout>

        <!--底部-->
        <LinearLayout
            android:id="@+id/footView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_dark"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:visibility="@{viewModel.isViewShow[ReaderViewModel.FOOT_VIEW] ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/catalogButton"
                style="@style/function_button_style_1"
                android:drawableTop="@drawable/ic_menu_toc_normal"
                android:onClick="@{() -> viewModel.footViewClickEvent(`catalogButton`)}"
                android:text="@string/catalogButton" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/fontSizeButton"
                style="@style/function_button_style_1"
                android:drawableTop="@drawable/ic_menu_settings_normal"
                android:onClick="@{() -> viewModel.footViewClickEvent(`fontSizeButton`)}"
                android:text="@string/settings" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/backgroundButton"
                style="@style/function_button_style_1"
                android:drawableTop="@drawable/ic_menu_mode_night_normal"
                android:onClick="@{() -> viewModel.footViewClickEvent(`backgroundButton`)}"
                android:text="@string/backgroundButton" />
        </LinearLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/loadingbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
